bk_ida/gccida/g1/c_alignof
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/c_alignof/src/c-common.c:2868:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v2; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/c_alignof/src/c-common.c:2869:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v3; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/c_alignof/src/c-common.c:2883:19: error: expected expression
v2 = ( tree_node *)*( &global_trees + 16); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/c_alignof/src/c-common.c:2883:8: error: use of undeclared identifier 'tree_node'
v2 = ( tree_node *)*( &global_trees + 16); 
       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/c_alignof/src/c-common.c:2892:19: error: expected expression
v2 = ( tree_node *)*( &global_trees + 15); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/c_alignof/src/c-common.c:2892:8: error: use of undeclared identifier 'tree_node'
v2 = ( tree_node *)*( &global_trees + 15); 
       ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/c_alignof/src/obj/c-common.o] Error 1
